--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             async function analyzeTicker() {
                 // IMPORTANTE: Cole seu token da API Brapi aqui
-                const apiToken = "SEU_TOKEN_AQUI";
+                const apiToken = "nMWaQN6yQE7QgxpfAmEfzN";
 
                 const ticker = tickerInput.value.trim().toUpperCase();
 
