--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
             function startMonitoring() {
                 const ticker = tickerInput.value.trim().toUpperCase();
                  // IMPORTANTE: Cole seu token da API Brapi aqui
-                const apiToken = "SEU_TOKEN_AQUI";
+                const apiToken = "nMWaQN6yQE7QgxpfAmEfzN";
 
                 if (!ticker) {
                     alert('Por favor, digite o código de uma ação para monitorar.');
                     return;
                 }
-                if (apiToken === "SEU_TOKEN_AQUI") {
+                if (apiToken === "nMWaQN6yQE7QgxpfAmEfzN") {
                     alert('Por favor, insira seu token da API Brapi diretamente no código HTML.');
                     return;
                 }
