--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     alert('Por favor, digite o código de uma ação para monitorar.');
                     return;
                 }
-                if (apiToken === "nMWaQN6yQE7QgxpfAmEfzN" || apiToken === "") {
+                if (apiToken === "SEU_TOKEN_AQUI" || apiToken === "") {
                     alert('Por favor, insira seu token da API Brapi diretamente no código HTML.');
                     return;
                 }
