--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             // --- CONFIGURAÇÃO PRINCIPAL ---
             // IMPORTANTE: Cole seu token da API Brapi aqui, no lugar de "SEU_TOKEN_AQUI"
-            const apiToken = "SEU_TOKEN_AQUI";
+            const apiToken = "nMWaQN6yQE7QgxpfAmEfzN";
 
             // --- VARIÁVEIS DE CONTROLE ---
             let monitoringIntervalId = null;
