--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Inclusão das bibliotecas de gráfico -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-financial/build/chartjs-chart-financial.min.js"></script>
+    <!-- URL Corrigida para a biblioteca de gráficos financeiros -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-financial/dist/chartjs-chart-financial.min.js"></script>
 
     <style>
         body {
