--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen p-4">
+<body class="bg-gray-100 flex flex-col items-center min-h-screen p-4">
 
-    <main style="margin-top: -150px;">
+    <main style="margin-top: -250px;">
         <div class="w-full max-w-lg bg-white rounded-2xl shadow-xl p-6 md:p-8">
             <div class="text-center">
                 <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Analisador de Ações</h1>
@@ -66,6 +66,7 @@
                 <!-- O conteúdo será inserido via JavaScript -->
             </div>
         </div>
+    </main>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
