--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="w-full max-w-lg bg-white rounded-2xl shadow-xl p-6 md:p-8">
             <div class="text-center">
                 <h1 class="text-2xl md:text-3xl font-bold text-gray-800">IA Analisadora de Ações do Mercado Financeiro</h1>
-                <p class="text-gray-500 mt-2">Descubra o melhor momento para comprar com base em análise técnica de IA.</p>
+                <p class="text-gray-500 mt-2">Descubra o melhor momento para comprar uma ação com base em análise técnica de IA.</p>
             </div>
 
             <!-- Input Section -->
